+ Text on the Image + Fix Centered Image - Image Stretched

--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,26 @@ a{
 }
 /* Body */
 .placeholder{
+    position: relative;
     width: 100%;
     min-height: 500px;
     margin-bottom: 20px;
 }
 .placeholder img{
+    width: 100%;
     height: 500px;
     margin: auto;
     border-radius: 20px;
+}
+.text{
+    position: absolute;
+    max-width: 580px;
+    bottom: 70px;
+    left: 50px;
+    color: white;
+}
+h2, h3{
+    margin:0;
 }
 .blu{
     background-color: #0088fc;
